# openncc

./: 2_HardwareManual.html  4_nccview.html  README.md
Platform/: README.md
Platform/Arm64/: README.md  arm.sh
Platform/Custom/: README.md  build_custom.sh  custom.sh
Platform/Linux/: README.md  linux.sh
Platform/Linux/Example/Linkage_demo/work_with_OpenVINO/human_pose_estimation_demo/: CMakeLists.txt
Platform/Linux/Example/Linkage_demo/work_with_OpenVINO/human_pose_estimation_demo/src/: human_pose.cpp  peak.cpp
Platform/Raspberry/: .pi.sh.swp  ReadMe.md  pi.sh
Platform/Windows/: ReadMe.md  build_windows.bat  windows.bat
SDK/: README.md
SDK/Example/: README.md
SDK/docs/: 404.html  DKHardwareManual.html  DKIntroduction.html  DownloadLink.html  FAQ.html  GettingStart.html  HardwareManual.html  Introduction.html  Openncc_sdk_api.html  Software_Manual.html  deploy.sh  index.html  nccview.html  openvino_install.html  package-lock.json  package.json
assets/css/: 0.styles.58b6422a.css
assets/js/: 10.962c8a08.js  10.d84ed684.js  11.8fd58871.js  11.dac5cc06.js  11.fa9f3ae3.js  12.9106b2cd.js  13.f45665ac.js  17.4471bc15.js  18.c23a9d01.js  18.f46af7a0.js  19.e3edccc8.js  20.e3ab8106.js  23.11167432.js  24.9b785b9a.js  24.a2db2384.js  (+12 more)
ch/: 4_NccView_ch.html  7_OpenvinoInstall_ch.html  8_DownloadLink_ch.html  9_FAQ_ch.html  index.html
docs/: 1_Introduction.html  2_HardwareManual.html  3_GettingStart.html  404.html  4_nccview.html  5_Software_Manual.html  6_Openncc_sdk_api.html  7_openvino_install.html  8_DownloadLink.html  9_FAQ.html  index.html
(+1400 files in other folders)
